@@ -4,6 +4,7 @@ import com.gepardec.mega.db.entity.State;
 import com.gepardec.mega.domain.model.Employee;
 import com.gepardec.mega.domain.model.Role;
 import com.gepardec.mega.domain.model.monthlyreport.MonthlyReport;
+import com.gepardec.mega.domain.model.monthlyreport.ProjectEntry;
 import com.gepardec.mega.domain.model.monthlyreport.ProjectTimeEntry;
 import com.gepardec.mega.domain.model.monthlyreport.Task;
 import com.gepardec.mega.service.api.stepentry.StepEntryService;
@@ -23,9 +24,9 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.ResourceBundle;
 
 @ExtendWith(MockitoExtension.class)
 public class MonthlyReportServiceImplTest {
@@ -38,12 +39,14 @@ public class MonthlyReportServiceImplTest {
 
     @Mock
     private CommentService commentService;
-
-    @InjectMocks
-    private MonthlyReportServiceImpl workerService;
+    @Mock
+    private ResourceBundle resourceBundle;
 
     @Spy
     private WarningCalculator warningCalculator;
+
+    @InjectMocks
+    private MonthlyReportServiceImpl workerService;
 
     @Test
     void testGetMonthendReportForUser_MitarbeiterNull() {
@@ -112,12 +115,12 @@ public class MonthlyReportServiceImplTest {
         Assertions.assertEquals(0.5d, monthendReportForUser.getTimeWarnings().get(0).getMissingBreakTime());
     }
 
-    private List<ProjectTimeEntry> createReadProjektzeitenResponseType(int bisHours) {
+    private List<ProjectEntry> createReadProjektzeitenResponseType(int bisHours) {
 
-        return Arrays.asList(new ProjectTimeEntry(LocalDateTime.of(2020, 1, 31, 7, 0),
-                        LocalDateTime.of(2020, 1, 31, bisHours, 0),
-                        Task.BEARBEITEN),
-                new ProjectTimeEntry(LocalDateTime.of(2020, 1, 30, 7, 0),
+        return List.of(ProjectTimeEntry.of(LocalDateTime.of(2020, 1, 31, 7, 0),
+                LocalDateTime.of(2020, 1, 31, bisHours, 0),
+                Task.BEARBEITEN),
+                ProjectTimeEntry.of(LocalDateTime.of(2020, 1, 30, 7, 0),
                         LocalDateTime.of(2020, 1, 30, 10, 0),
                         Task.BEARBEITEN));
     }
